samples/_failures_safe/1761636488_c56f48_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e28f7aa.c: In function ‘main’:
./samples/SAFE/__tmp_8e28f7aa.c:147:16: error: missing terminating " character
  147 |         printf("5. Exit\n
      |                ^~~~~~~~~~
./samples/SAFE/__tmp_8e28f7aa.c:147:9: error: expected expression at end of input
  147 |         printf("5. Exit\n
      |         ^~~~~~
./samples/SAFE/__tmp_8e28f7aa.c:147:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8e28f7aa.c:147:9: error: expected declaration or statement at end of input
